added endpoints to add, view, update, delete product and rewrote documentation with JSDOCS
